# Structures

./: .gitignor  CMakeLists.txt  README  test_file
src/: BTree.cpp  BTree.hpp  CMakeLists.txt  FList.cpp  FList.hpp  List.cpp  List.hpp  Stack.cpp  Stack.h  Stack.hpp  Stack_impl.cpp  Stack_impl.hpp  main.cpp
test/: CMakeLists.txt  list_test.cpp  stackImpl_test.cpp  stack_test.cpp  test.cpp
